# api/src/main/kotlin/iut/fauryollivier/snoozespot/api/repositories/UserRepository.kt
@@ -4,6 +4,7 @@ import iut.fauryollivier.snoozespot.api.auth.Password
 import iut.fauryollivier.snoozespot.api.auth.model.UserAuthRequest
 import iut.fauryollivier.snoozespot.api.database.Tables
 import iut.fauryollivier.snoozespot.api.database.selectActive
+import iut.fauryollivier.snoozespot.api.entities.EntityBase
 import iut.fauryollivier.snoozespot.api.entities.Post
 import iut.fauryollivier.snoozespot.api.entities.Spot
 import iut.fauryollivier.snoozespot.api.entities.StoredFile
@@ -11,18 +12,25 @@ import iut.fauryollivier.snoozespot.api.entities.User
 import iut.fauryollivier.snoozespot.api.enums.StoredFileType
 import iut.fauryollivier.snoozespot.api.enums.StoredFileUsage
 import org.jetbrains.exposed.sql.*
+import org.jetbrains.exposed.sql.SqlExpressionBuilder.eq
 import org.jetbrains.exposed.sql.transactions.transaction
 import java.util.*
 
 class UserRepository : RepositoryBase() {
+    override fun ResultRow.toEntity(loadRelations: Boolean): User {
+        return toEntity(loadRelations, null)
+    }
 
-    override fun ResultRow.toEntity(
-        loadRelations: Boolean
+    fun ResultRow.toEntity(
+        loadRelations: Boolean,
+        authUser: Int?
     ): User {
         val spots = if (loadRelations) emptyList() else emptyList<Spot>() //TODO: load spots
         val posts = if (loadRelations) emptyList() else emptyList<Post>() //TODO: load posts
         val following = if (loadRelations) emptyList() else emptyList<User>() //TODO: load following
         val followers = if (loadRelations) emptyList() else emptyList<User>() //TODO
+
+        val followedByUser = authUser != null && isFollowedBy(this[Tables.Users.id].value, authUser).getOrThrow()
 
         val profilePictureId = this[Tables.Users.profilePictureId]
 
@@ -58,6 +66,7 @@ class UserRepository : RepositoryBase() {
             posts = posts,
             following = following,
             followers = followers,
+            followedByUser = followedByUser
         )
     }
 
@@ -111,10 +120,10 @@ class UserRepository : RepositoryBase() {
         return Result.success(res)
     }
 
-    fun getById(id: Int, loadRelations: Boolean = false): Result<User> {
+    fun getById(id: Int, authUser: Int? = null, loadRelations: Boolean = false): Result<User> {
         val user = transaction {
             Tables.Users.select { Tables.Users.id eq id }.map {
-                it.toEntity(loadRelations = loadRelations)
+                it.toEntity(authUser = authUser, loadRelations = loadRelations)
             }
         }.firstOrNull()
         if (user == null) return Result.failure(Exception("User not found"))
@@ -145,6 +154,72 @@ class UserRepository : RepositoryBase() {
         } else {
             Result.failure(Exception("User not found or profile picture unchanged"))
         }
+    }
+
+    fun follow(followerId: Int, followedId: Int): Result<Unit> {
+        return try {
+            transaction {
+                Tables.Following.insert {
+                    it[Tables.Following.followerId] = followerId
+                    it[Tables.Following.followedId] = followedId
+                }
+            }
+            Result.success(Unit)
+        } catch (e: Exception) {
+            Result.failure(e)
+        }
+    }
+
+    fun unfollow(followerId: Int, followedId: Int): Result<Unit> {
+        return try {
+            transaction {
+                Tables.Following.deleteWhere {
+                    (Tables.Following.followerId eq followerId) and
+                            (Tables.Following.followedId eq followedId)
+                }
+            }
+            Result.success(Unit)
+        } catch (e: Exception) {
+            Result.failure(e)
+        }
+    }
+
+    fun getFollowing(userId: Int): Result<List<User>> {
+        return try {
+            val users = transaction {
+
+                val followedIds = Tables.Following
+                    .slice(Tables.Following.followedId)
+                    .select { Tables.Following.followerId eq userId }
+                    .map { it[Tables.Following.followedId] }
+
+                if (followedIds.isEmpty()) {
+                    return@transaction emptyList<User>()
+                }
+
+                Tables.Users
+                    .select { Tables.Users.id inList followedIds }
+                    .map { it.toEntity(loadRelations = false) }
+            }
+
+            Result.success(users)
+
+        } catch (e: Exception) {
+            Result.failure(e)
+        }
+    }
+
+
+    fun isFollowedBy(followedId: Int, followerId: Int): Result<Boolean> {
+        val isFollowing = transaction {
+            Tables.Following
+                .select {
+                    (Tables.Following.followedId eq followedId) and
+                            (Tables.Following.followerId eq followerId)
+                }
+                .any()
+        }
+        return Result.success(isFollowing)
     }
 
 }
