# app/app/src/main/java/iut/fauryollivier/snoozespot/app/pages/feed/accountdetails/AccountDetailsViewModel.kt
@@ -2,9 +2,11 @@ package iut.fauryollivier.snoozespot.app.pages.feed.accountdetails
 
 import androidx.lifecycle.ViewModel
 import androidx.lifecycle.viewModelScope
+import iut.fauryollivier.snoozespot.R
 import iut.fauryollivier.snoozespot.api.generated.model.UserDTO
 import iut.fauryollivier.snoozespot.repositories.UsersRepository
 import iut.fauryollivier.snoozespot.utils.ErrorMessage
+import iut.fauryollivier.snoozespot.utils.Toaster
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.StateFlow
 import kotlinx.coroutines.flow.asStateFlow
@@ -29,6 +31,32 @@ class AccountDetailsViewModel : ViewModel() {
                 _account.value = account.body()!!
             else
                 _errorMessage.value = ErrorMessage.COULD_NOT_FETCH_ERROR
+        }
+    }
+
+    fun followUser(uuid: UUID) {
+        viewModelScope.launch {
+            val result = UsersRepository.followUser(uuid)
+            if (result.isSuccessful) {
+                _account.value = _account.value!!.copy(
+                    followedByUser = true
+                )
+            } else {
+                Toaster.instance.toast(R.string.could_not_follow)
+            }
+        }
+    }
+
+    fun unfollowUser(uuid: UUID) {
+        viewModelScope.launch {
+            val result = UsersRepository.unfollowUser(uuid)
+            if (result.isSuccessful) {
+                _account.value = _account.value!!.copy(
+                    followedByUser = false
+                )
+            } else {
+                Toaster.instance.toast(R.string.could_not_unfollow)
+            }
         }
     }
 
